deployment/kubernetes/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: payment
  name: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: minter-assets
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          image: 667950714614.dkr.ecr.us-east-1.amazonaws.com/minter-service:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
