deployment/kubernetes/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: payment
  name: payment
spec:
  selector:
    app: payment
  ports:
    - port: 80
      name: http
      targetPort: 3000
